--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:h2:~/jpa_test
+spring.datasource.username=evi
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active=production
