--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:~/jpa_test
-spring.datasource.username=evi
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:h2:~/dogShelter
+spring.jpa.hibernate.ddl-auto=create
 spring.profiles.active=production
+spring.datasource.username=sa
